--- a/package.json
+++ b/package.json
@@ -5,9 +5,16 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
-    "start": "wrangler dev"
+    "start": "wrangler dev",
+    "test": "jest"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "wrangler": "^3.0.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^~(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
