--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dry-silence-ff52",
-  "version": "0.0.0",
+  "name": "foo",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
+    "dotenv": "^16.4.5",
     "itty-router": "^5.0.5"
   }
 }
