--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vitest/coverage-v8": "^1.4.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-vitest": "^0.4.1",
     "vitest": "^1.4.0",
     "wrangler": "^3.43.0"
   },
