--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,12 @@ jobs:
       - run: cat test.txt
       - run: npx wrangler version
 
+  deploy-to-cloudflare:
+    executor: node/default
+    steps:
+      - attach_workspace:
+          at: ~/project
+      - run: npx wrangler login
 
 workflows:
   test_and_lint:
