--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,14 +33,15 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run: cat test.txt
-      - run: npx wrangler version
+      - run: npx wrangler --version
 
   deploy-to-cloudflare:
     executor: node/default
     steps:
       - attach_workspace:
           at: ~/project
-      - run: npx wrangler login
+      - run: npx wrangler whoami
+      - run: npx wrangler deploy
 
 workflows:
   test_and_lint:
