Automate wrangler deploy (#10)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,8 +33,15 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run: cat test.txt
-      - run: npx wrangler version
+      - run: npx wrangler --version
 
+  deploy-to-cloudflare:
+    executor: node/default
+    steps:
+      - attach_workspace:
+          at: ~/project
+      - run: npx wrangler whoami
+      - run: npx wrangler deploy
 
 workflows:
   test_and_lint:
@@ -46,4 +53,6 @@ workflows:
       - check-wrangler-ok:
           requires:
             - build-and-test
-
+      - deploy-to-cloudflare:
+          requires:
+            - check-wrangler-ok
