--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,5 @@ compatibility_date = "2024-01-29"
 routes = [
 	{ pattern = "foobar.rustymagnet.xyz", custom_domain = true }
 ]
+[site]
+bucket = "./assets"
