--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,12 @@
 name = "foo"
 main = "src/index.js"
 compatibility_date = "2024-01-29"
-routes = [
-	{ pattern = "foobar.rustymagnet.xyz", custom_domain = true }
-]
+workers_dev = false
+
+routes = [{ pattern = "foobar.rustymagnet.xyz", custom_domain = true }]
 [site]
 bucket = "./assets"
+
+[dev]
+port = 8787
+local_protocol = "http"
