--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,8 @@ jobs:
     executor: node/default
     steps:
       - checkout
-      - node/install-packages:
-          pkg-manager: npm
-      - run: node --version
-      - run: npm test
+      - run: vitest --version
+      - run: vitest --run
       - run: echo "hello" > test.txt
       - persist_to_workspace:
            root: ~/project
