--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
       - checkout
       - node/install-packages:
           pkg-manager: npm
-      - run: vitest --version
-      - run: vitest --run
+      - run: npx vitest --version
+      - run: npx vitest --run
       - run: echo "hello" > test.txt
       - persist_to_workspace:
            root: ~/project
