--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
     executor: node/default
     steps:
       - checkout
+      - node/install-packages:
+          pkg-manager: npm     # vitest will fail to find index.js if npm not installed
       - run: npx vitest --version
       - run: npx vitest --run
       - run: echo "hello" > test.txt
