--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,6 +8,10 @@ routes = [{ pattern = "foobar.rustymagnet.xyz", custom_domain = true }]
 [site]
 bucket = "./assets"
 
+rules = [
+    { type = "Text", globs = ["**/*.html"], fallthrough = true }
+]
+
 [dev]
 port = 8787
 local_protocol = "http"
