chore - migrate to typescript

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - checkout
       - node/install-packages:
-          pkg-manager: npm     # vitest will fail to find index.js if npm not installed
+          pkg-manager: npm     # vitest will fail to find index.ts if npm not installed
       - run: npx vitest --version
       - run: npx vitest --run
       - run: echo "hello" > test.txt
