--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "foo",
   "version": "0.0.4",
   "private": true,
@@ -12,9 +13,12 @@
     "test-coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@vitest/coverage-v8": "^1.4.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vitest": "^0.4.1",
+    "typescript": "^5.4.4",
+    "typescript-eslint": "^7.6.0",
     "vitest": "^1.4.0",
     "wrangler": "^3.43.0"
   },
