--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
         "jsx": "react-jsx",
         "jsxImportSource": "hono/jsx"
     },
+    "watchOptions": {
+        "excludeDirectories": [".wrangler/*"]
+    },
+
     "types": [
         "@cloudflare/workers-types/2023-07-01"
     ]
