--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "lint": "eslint .",
+    "prettier": "npx prettier --write .",
     "start": "wrangler dev",
     "test": "vitest --run",
     "test-coverage": "vitest run --coverage"
@@ -17,6 +18,7 @@
     "@vitest/coverage-v8": "^1.4.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vitest": "^0.4.1",
+    "prettier": "3.2.5",
     "typescript": "^5.4.4",
     "typescript-eslint": "^7.6.0",
     "vitest": "^1.4.0",
