--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,19 @@
 {
-    "compilerOptions": {
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "Bundler",
-        "strict": true,
-        "jsx": "react-jsx",
-        "jsxImportSource": "hono/jsx"
-    },
-    "watchOptions": {
-        "excludeDirectories": [".wrangler/*"]
-    },
+  "compilerOptions": {
+    "target": "ES2021",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "strict": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx",
+    "noEmit": true // // ensure that nobody can accidentally use this config for a build
+  },
+  "watchOptions": {
+    "excludeDirectories": [".wrangler/*"]
+  },
 
-    "types": [
-        "@cloudflare/workers-types/2023-07-01"
-    ]
+  "types": ["@cloudflare/workers-types/2023-07-01"],
+  "exclude": [".wrangler"],
 }
