--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,13 +23,14 @@ jobs:
           paths:
             - .
 
-  lint:
+  lint_and_style:
     executor: node/default
     steps:
       - attach_workspace:
           at: ~/project
       - run: npx eslint --version
-      - run: npm run lint
+      - run: npx eslint .
+      - run: npx prettier --check  .
 
   check-wrangler-ok:
     executor: node/default
@@ -51,7 +52,7 @@ workflows:
   test_and_lint:
     jobs:
       - build-and-test
-      - lint:
+      - lint_and_style:
           requires:
             - build-and-test
       - check-wrangler-ok:
