--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "excludeDirectories": [".wrangler/*"]
   },
 
-  "types": ["@cloudflare/workers-types/2023-07-01"],
+  "types": ["@cloudflare/workers-types/2023-07-01"]
 }
