--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,5 @@
     "excludeDirectories": [".wrangler/*"]
   },
 
-  "types": ["@cloudflare/workers-types/2023-07-01"],
-  "exclude": [".wrangler"],
+  "types": ["@cloudflare/workers-types/2023-07-01"]
 }
